:up: Update welcome page and tour tab

--- a/weppy_mvc_demo/static/css/style.css
+++ b/weppy_mvc_demo/static/css/style.css
@@ -36,6 +36,15 @@
   background-color: #585858;
   opacity: 1;
 }
+
+blockquote {
+  color: rgba(0, 0, 0, 0.54);
+}
+
+.secondary {
+  color: rgba(0, 0, 0, 0.54);
+}
+
 @media only screen and (min-width: 768px) {
   .cd-top {
     right: 20px;
