--- a/weppy_mvc_demo/views/_global_footer.haml
+++ b/weppy_mvc_demo/views/_global_footer.haml
@@ -2,5 +2,5 @@
   Top
 
 %footer.footer.navbar.navbar-inverse.navbar-fixed-bottom
-  .container{style: "padding-top:15px"}
+  .container{style: "padding-top:15px;"}
     %p.text-muted &copy; Weppy Mvc Demo 2016
