:new: Add link to repo

--- a/weppy_mvc_demo/views/_global_footer.haml
+++ b/weppy_mvc_demo/views/_global_footer.haml
@@ -3,4 +3,7 @@
 
 %footer.footer.navbar.navbar-inverse.navbar-fixed-bottom
   .container{style: "padding-top:15px;"}
-    %p.text-muted &copy; Weppy Mvc Demo 2016
+    %p.text-muted
+      &copy; Weppy Mvc Demo 2016 -
+      %a{href: "https://github.com/mijdavis2/weppy-mvc-demo"}
+        View the Code
