:art: Update welcome content

--- a/weppy_mvc_demo/views/_global_navbar.haml
+++ b/weppy_mvc_demo/views/_global_navbar.haml
@@ -29,3 +29,7 @@
           %li
             %a{href: "{{=url('main.account', 'logout')}}"}
               = T("Logout")
+      %ul.nav.navbar-nav{style: "float: right;"}
+        %li
+          %a{href: "https://mdavisinsc.com"}
+            mdavisinsc
