--- a/weppy_mvc_demo/views/welcome.haml
+++ b/weppy_mvc_demo/views/welcome.haml
@@ -30,13 +30,13 @@
       Weppy MVC Features
     %ul
       %li
-        Python3 MVC framework
+        Pythonic MVC framework
       %li
-        Easy addon modules - api included
+        API included
       %li
         Pythonic Haml
       %li
-        pyDAL
+        100% Test Coverage
       %li
         Bootstrap
 
