:art: Add language translations

--- a/weppy_mvc_demo/views/generator_weppy_description.haml
+++ b/weppy_mvc_demo/views/generator_weppy_description.haml
@@ -22,9 +22,9 @@
 
   .col-md-6
     %p
-      This generator is based on the latest version of the
+      #{ T("This generator is based on the latest version of the") }
       %a{:href => "https://github.com/mijdavis2/starter_weppy"} starter-weppy
-      project.
+      #{ T("project") }.
     %p
       %a{:href => "https://travis-ci.org/mijdavis2/starter_weppy"}
         %img{:alt => "Build Status", "data-canonical-src" => "https://travis-ci.org/mijdavis2/starter_weppy.svg?branch=master", :src => "https://camo.githubusercontent.com/c8b14181947a5af0d0c5978fa3e1574101752198/68747470733a2f2f7472617669732d63692e6f72672f6d696a6461766973322f737461727465725f77657070792e7376673f6272616e63683d6d6173746572", :style => "max-width:100%;"}
@@ -36,6 +36,6 @@
       starter-weppy
     %a{:href => "https://github.com/mijdavis2/starter_weppy"}
       Starter-weppy
-    is a python web application starter kit developed on the
+    #{ T("is a python web application starter kit developed on the") }
       %a{:href => "https://github.com/gi0baro/weppy"} weppy framework
-    Current version is based on Weppy 0.6 with an MVC scaffolding. An api module, dev mode, and 100% test coverage are included out of the box.
+    #{ T("Current version is based on Weppy 0.6 with an MVC scaffolding. An api module, dev mode, and 100% test coverage are included out of the box.") }
