--- a/weppy_mvc_demo/views/welcome.haml
+++ b/weppy_mvc_demo/views/welcome.haml
@@ -18,28 +18,28 @@
     %h3
       Weppy Features
     %ul
-      %li Simple routing system
-      %li Beautiful ORM with integrated migrations
-      %li Elegant validation system
-      %li Secure authentication system
-      %li Handy forms generation
-      %li Straight multi-language system
-      %li Powerful and friendly templating system
-      %li Haml templating (extension)
+      %li #{ T("Simple routing system") }
+      %li #{ T("Beautiful ORM with integrated migrations") }
+      %li #{ T("Elegant validation system") }
+      %li #{ T("Secure authentication system") }
+      %li #{ T("Handy forms generation") }
+      %li #{ T("Straight multi-language system") }
+      %li #{ T("Powerful and friendly templating system") }
+      %li #{ T("Haml templating (extension)") }
   .col-md-6
     %h3
       Weppy MVC Features
     %ul
       %li
-        Pythonic MVC framework
+        #{ T("Pythonic MVC framework") }
       %li
-        API included
+        #{ T("API included") }
       %li
-        Pythonic Haml
+        #{ T("Pythonic Haml") }
       %li
-        100% Test Coverage
+        #{ T("100% Test Coverage") }
       %li
-        Bootstrap
+        #{ T("Bootstrap") }
 %hr
 %h2 #{ T("Want to build your own?") }
 
