--- a/weppy_mvc_demo/views/tour.haml
+++ b/weppy_mvc_demo/views/tour.haml
@@ -1,3 +1,10 @@
 - extend 'layout.haml'
 
+%h1 Weppy MVC Tour
+
+%p.secondary
+  %b
+    Note:
+  Currently in development. More to come in the following days/weeks.
+
 - include 'tour/file_structure.haml'
