:art: Add upcoming features

--- a/weppy_mvc_demo/views/welcome.haml
+++ b/weppy_mvc_demo/views/welcome.haml
@@ -30,16 +30,16 @@
     %h3
       Weppy MVC Features
     %ul
-      %li
-        #{ T("Pythonic MVC framework") }
-      %li
-        #{ T("API included") }
-      %li
-        #{ T("Pythonic Haml") }
-      %li
-        #{ T("100% Test Coverage") }
-      %li
-        #{ T("Bootstrap") }
+      %li #{ T("Pythonic MVC framework") }
+      %li #{ T("API included") }
+      %li #{ T("Pythonic Haml") }
+      %li #{ T("100% Test Coverage") }
+      %li #{ T("Virtual environment setup") }
+      %li #{ T("Bootstrap") }
+    %h4
+      #{ T("Upcoming") }
+    %ul
+      %li #{ T("Material Design and Icon support (optional)") }
 %hr
 %h2 #{ T("Want to build your own?") }
 
