WIP Refactor using material design

--- a/weppy_mvc_demo/static/css/style.css
+++ b/weppy_mvc_demo/static/css/style.css
@@ -153,6 +153,26 @@ ul.ascii > li > ul > li:last-child > ul > li:last-child > ul > li:last-child > u
 ul.ascii > li > ul > li:last-child > ul > li:last-child > ul > li:last-child > ul > li:last-child > ul > li::before { content: "\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0├──\00a0"}
 ul.ascii > li > ul > li:last-child > ul > li:last-child > ul > li:last-child > ul > li:last-child > ul > li:last-child::before { content: "\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0└──\00a0"; }
 
-body {
-  padding-bottom: 100px;
+/*body {*/
+  /*padding-bottom: 100px;*/
+/*}*/
+
+.pl-k {
+  color: #a71d5d;
+}
+.pl-en {
+  color: #795da3;
+}
+.pl-v {
+  color: #ed6a43;
+}
+.pl-c1, .pl-s .pl-v {
+  color: #0086b3;
+}
+.pl-pds, .pl-s, .pl-s .pl-pse .pl-s1, .pl-sr, .pl-sr .pl-cce, .pl-sr .pl-sra, .pl-sr .pl-sre {
+  color: #183691;
+}
+
+.demo-layout-waterfall .mdl-layout__header-row .mdl-navigation__link:last-of-type  {
+  padding-right: 0;
 }
