--- a/weppy_mvc_demo/views/_global_head.haml
+++ b/weppy_mvc_demo/views/_global_head.haml
@@ -3,5 +3,5 @@
 %link{href: "../static/images/favicon.ico", rel: "shortcut icon"}
 
 - include_helpers
-- include_static 'bs3/css/bootstrap.min.css'
+- include_static 'css/material.min.css'
 - include_static 'css/style.css'
