WIP Experiment with mdl classes

--- a/weppy_mvc_demo/views/_global_head.haml
+++ b/weppy_mvc_demo/views/_global_head.haml
@@ -5,3 +5,5 @@
 - include_helpers
 - include_static 'css/material.min.css'
 - include_static 'css/style.css'
+- include_static 'css/styles.css'
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
