--- a/weppy_mvc_demo/views/welcome.haml
+++ b/weppy_mvc_demo/views/welcome.haml
@@ -1,11 +1,11 @@
 - extend "layout.haml"
 
 %section.section--center.mdl-grid
-  .mdl-card.mdl-cell.mdl-cell--12-col.mdl-shadow--2dp
-    .mdl-card__supporting-text
+  .mdl-cell.mdl-cell--12-col
+    .mdl-color-text--grey-800
       %h1 #{ T("Weppy Mvc Demo") }
 
-      %h4.secondary
+      %h4
         #{ T("A full-stack python application built with ") }
           %a{href: "http://weppy.org/"}
             Weppy
