:art: Cleanup welcome page

--- a/weppy_mvc_demo/views/welcome.haml
+++ b/weppy_mvc_demo/views/welcome.haml
@@ -2,16 +2,15 @@
 
 %h1 #{ T("Welcome to Weppy Mvc Demo") }
 %h4.secondary
-  #{ T("An MVC scaffolding built on ") }
+  #{ T("a full-stack python web application built on the ") }
     %a{href: "http://weppy.org/"}
-      Weppy:
-  #{ T("a full-stack python web framework designed with simplicity in mind.") }
-.secondary
-  #{ T("Note: This is a work in progress. More examples and tutorials are in development") }
-%h2
+      weppy framework
+%h3
   #{ T("This application stack was created using ") }
     %a{href: "https://github.com/mijdavis2/generator-weppy-mvc"}
-      generator-weppy-mvc.
+      generator-weppy-mvc
+%h4.secondary
+  #{ T("a weppy mvc scaffolding generator") }
 %hr
 .row
   .col-md-6
@@ -30,16 +29,19 @@
     %h3
       Weppy MVC Features
     %ul
-      %li #{ T("Pythonic MVC framework") }
-      %li #{ T("API included") }
-      %li #{ T("Pythonic Haml") }
+      %li #{ T("Easy virtual environment setup") }
+      %li #{ T("Pythonic MVC scaffolding") }
+      %li #{ T("API module and examples included") }
       %li #{ T("100% Test Coverage") }
-      %li #{ T("Virtual environment setup") }
+      %li #{ T("Dev mode & development tools") }
+      %li #{ T("Haml templating") }
       %li #{ T("Bootstrap") }
     %h4
       #{ T("Upcoming") }
     %ul
-      %li #{ T("Material Design and Icon support (optional)") }
+      %li #{ T("Deployment tools") }
+      %li #{ T("Progressive app shell structure") }
+      %li #{ T("Material Design and icons") }
 %hr
 %h2 #{ T("Want to build your own?") }
 
