:new: Use shippable

--- a/weppy_mvc_demo/views/tour.haml
+++ b/weppy_mvc_demo/views/tour.haml
@@ -8,3 +8,6 @@
   Currently in development. More to come in the following days/weeks.
 
 - include 'tour/file_structure.haml'
+
+- include 'tour/ajax.haml'
+
