:art: Add badge to welcome view

--- a/weppy_mvc_demo/views/welcome.haml
+++ b/weppy_mvc_demo/views/welcome.haml
@@ -5,6 +5,8 @@
   #{ T("a full-stack python web application built on the ") }
     %a{href: "http://weppy.org/"}
       weppy framework
+%a{href: "http://weppy.org/"}
+  %img{src: "https://img.shields.io/badge/weppy-0.7.1-blue.svg"}
 %h3
   #{ T("This application stack was created using ") }
     %a{href: "https://github.com/mijdavis2/generator-weppy-mvc"}
